--- a/templates/monatelier4.html
+++ b/templates/monatelier4.html
@@ -40,7 +40,7 @@
       }
     }
 
-    async function fetchNoumeaData() {
+    async function fetchParisData() {
       const res = await fetch('/noumea', { headers: { 'Accept': 'application/json' } });
 
       if (!res.ok) {
