--- a/templates/monatelier4.html
+++ b/templates/monatelier4.html
@@ -27,7 +27,7 @@
 
     async function init() {
       try {
-        const rows = await fetchParisData();
+        const rows = await fetchNoumeaData();
         cachedRows = rows;
         drawChart(rows);
 
